# nami

./: CMakeLists.txt  README.md
include/GLFW/: glfw3.h
include/glad/: glad.h
include/glm/ext/: quaternion_common.inl
include/nami/: Graphics.h  camera.h  graphics.h  smoke.h  wave.h
lib/glad/: glad.c
shaders/: background.vert  scrolling.frag  simple.frag  simple.vert  smoke.frag  smoke.vert
src/: Graphics.cpp  camera.cpp  graphics.cpp  main.cpp  smoke.cpp  wave.cpp
src/graphics/: core.cpp  generation.cpp
